# serverless

./: .env  .gitignore  README.md  config.py  config.txt  pyproject.toml  requirements.txt  time.py
api/: cf.py  fact.py  index.py  info.py
app/: define.py
app/api/: cf.py  chuck.py  date.py  define.py  earth.py  info.py
app/data_sources/: chuck_norris.py
data_sources/: chuck_norris.py  intro.py
