[tool.poetry]
name = "serverless"
version = "0.1.0"
description = ""
authors = ["Ian Cargill <idcargill@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.5"
requests = "^2.27.1"
vercel = "^0.2.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
